@@ -38,6 +38,7 @@
 	- update python bindings from anaconda.
 	- add versions to prereq.
 	- add syntax sensitive implict prereq on rpm-3.0.3.
+	- fix: don't successfully match with strncasecmp("sparc", "sparc64", 5)
 
 3.0.1 -> 3.0.2
 	- eliminate armv4 entries from rpmrc (Andrew E. Mileski).
